# atrai-bikes-ingestor

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  DOCKER_SETUP.md  Dockerfile  MIGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  UPSERT_APPROACH.md  campaigns.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run_migration.py  run_scheduler.py
.github/workflows/: ci.yml
martin/: config.yaml
migrations/: 000_initial_schema.sql  001_rename_columns_for_pygeoapi.sql  002_create_tracks_table.sql  003_statistics_table.sql  004_tracks_unique_constraint.sql
src/: __init__.py  api.py  api_client.py  database.py  parser.py  scheduler.py  sync_coordinator.py  track_processor.py
src/atrai_processes/: __init__.py  annotate_roads.py  atrai_processor.py  bumpy_roads.py  collection_delete.py  collection_healthcheck.py  dangerous_places.py  data_ingestion.py  distances_flowmap.py  map_points_to_road_network.py  pm_analysis.py  process_base.py  road_network.py  speed_traffic_flow.py  statistics.py  temperature.py  traffic_stops.py
