[project]
name = "sensor-data-sync"
version = "0.1.0"
description = "Sensor data synchronization system that fetches environmental sensor data from OpenSenseMap archives and stores it in a PostGIS database"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "geopandas>=0.14.0",
    "movingpandas>=0.16.0",
    "shapely>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.51",
    "osmnx>=2.0.7",
    "scikit-learn>=1.6.1",
    "filelock>=3.19.1",
    "pyyaml>=6.0.3",
    "folium>=0.20.0",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "transformations>=2024.5.24",
    "geoalchemy2>=0.17.1",
    "flask-cors>=5.0.0",
    "geojson>=3.2.0",
    "h5netcdf>=1.8.1",
    "netcdf4>=1.7.2",
    "rasterio>=1.4.3",
    "rioxarray>=0.15.0",
    "s3fs>=2025.10.0",
    "xarray>=2024.7.0",
    "zarr>=2.18.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
